refactor: padroniza componentes e estilos conforme segue o figma do projeto

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,24 +1,18 @@
 .layout {
-    background-color: #121212;
-
+  background-color: #121212;
 }
 .MuiContainer-root {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
-.navigationLink{
-    text-decoration: none;
-    color: white;
-    margin: 0 10px;
-}
-.navigationLink :hover {
-    text-decoration: underline;
-    color: #121212
+.navigationLink {
+  text-decoration: none;
+  color: white;
 }
 
-.actions{
-    background-color: #5B5B5B;
+.actions {
+  background-color: #5b5b5b;
 }
-.actions :hover{
-    background-color: #363636;
+.actions :hover {
+  background-color: #363636;
 }
